--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ TELEGRAM_HASH = "65a23aaa7a97f42475de52ed240af2f3"                          # Re
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://leechbot:leechbot01@cluster0.vxfsb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"    # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://leechpro2:leechpro2@leechpro2.3kub7yp.mongodb.net/?retryWrites=true&w=majority&appName=Leechpro2"    # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-1002388477031"                       # Require restart after changing it while bot running
@@ -24,7 +24,7 @@ FSUB_IDS = "-1001639885092"
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = "19-6lsbvhynU7XYvvsVTo4sjVFOhfz8dp?usp=sharing"
+GDRIVE_ID = ""
 USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
